// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component as required 1`] = `
<div
  className="TextInput TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="someTestId"
    disabled={false}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={true}
  />
</div>
`;

exports[`renders the component with a placeholder text 1`] = `
<div
  className="TextInput TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    placehoder="placeholder text"
    required={false}
  />
</div>
`;

exports[`renders the component with a test id 1`] = `
<div
  className="TextInput TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="someTestId"
    disabled={false}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
</div>
`;

exports[`renders the component with all required props 1`] = `
<div
  className="TextInput TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    labelText="E-Mail"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
</div>
`;

exports[`renders the component with an additional class name 1`] = `
<div
  className="TextInput my-extra-class TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
</div>
`;

exports[`renders the component with disabled prop 1`] = `
<div
  className="TextInput TextInput--full TextInput--disabled"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={true}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
</div>
`;

exports[`renders the component with error prop 1`] = `
<div
  className="TextInput TextInput--full TextInput--negative"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
</div>
`;

exports[`renders the component with maxLength 1`] = `
<div
  className="TextInput TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    maxLength={10}
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
</div>
`;

exports[`renders the component with onBlur prop 1`] = `
<div
  className="TextInput TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    name="userEmail"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
</div>
`;

exports[`renders the component with onChange prop 1`] = `
<div
  className="TextInput TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
</div>
`;

exports[`renders the component with small width 1`] = `
<div
  className="TextInput TextInput--small"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
</div>
`;

exports[`renders the component with the copy button 1`] = `
<div
  className="TextInput TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
  />
  <CopyButton
    extraClassNames="TextInput__copy-button"
    onCopy={[Function]}
    testId="cf-ui-copy-button"
  />
</div>
`;

exports[`renders the component with value prop 1`] = `
<div
  className="TextInput TextInput--full"
>
  <input
    aria-label="userEmail"
    className="TextInput__input"
    data-test-id="cf-ui-text-input"
    disabled={false}
    id="someInput"
    name="userEmail"
    onChange={[Function]}
    onFocus={[Function]}
    required={false}
    value="123"
  />
</div>
`;
